--- a/Downloads/Work/autotrade-demo-main/requirements.txt
+++ b/Downloads/Work/autotrade-demo-main/requirements.txt
@@ -3,11 +3,11 @@ uvicorn==0.35.0
 jinja2
 pyTelegramBotAPI
 alpaca-trade-api
-openai
+openai<1
 yfinance==0.2.36
 python-dotenv
 python-dotenv
 yfinance==0.2.36
 alpaca-trade-api
 websockets>=11
-openai
+openai<1
