--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-fastapi
-uvicorn
-jinja2
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+python-dotenv==1.1.1
+pydantic==2.6.4
+pydantic_core==2.16.3
+pyTelegramBotAPI==4.15.4
+alpaca-trade-api==3.0.0
+yfinance==0.2.36
+openai==1.30.2
