--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-fastapi
-uvicorn
-jinja2
+fastapi==0.109.2
+uvicorn==0.35.0
+jinja2==3.1.3
+python-dotenv==1.1.1
+pyTelegramBotAPI==4.28.0
+alpaca-trade-api==3.0.0
+yfinance==0.2.36
+openai==1.30.2
+aiohttp==3.8.1
+urllib3==1.26.20
